[package]
name = "esp32-rust-template"
version = "0.1.0"
edition = "2026"
description = "Production-ready ESP32 Rust development template"
repository = "https://github.com/Aadhil-M/esp32-rust-template"
license = "MIT"

[dependencies]
esp-idf-sys = { version = "0.34", features = ["native"] }
esp-idf-hal = "0.43"
esp-idf-svc = "0.49"
log = "0.4"
esp-println = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
